Sec13_Chap116-Configure multiples users: optimized Controller code